--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,15 @@ h2{
 }
 
 
+.btn-container i{
+    font-size: 20px;
+    margin-top: -13px;
+    margin-bottom: -8px;
+    margin-left: 10px;
+    margin-right: -5px;
+}
+
+
 
   .btn-3 {
     flex: auto;
@@ -563,10 +572,22 @@ h2{
     background-image: linear-gradient(to right,  #ff6900 0%, #fcb900 100%);
    }
 
+
+
+
+
    .btn-3:hover {
     background-position: right center; /* change the direction of the change here */
     color: black;
   }
+
+
+
+
+
+
+
+
 
   /*End of call me and email */
 
@@ -576,6 +597,20 @@ h2{
 
 /* Review Section Begins
 ----------------------------------*/
+
+h5{
+    margin-top: -6rem;
+    margin-left: -1rem;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+
+.work{
+    margin-bottom: -12rem;
+}
+
+
 .container {
     width: 100%;
     padding: 5px 30px;
@@ -603,6 +638,7 @@ h2{
 
   .work-container{
       max-width: 1200px;
+      height: 300px;
       margin: 0 auto;
       padding: 7rem 0.5rem;
   }
@@ -613,7 +649,7 @@ h2{
   }
 
 
-  .heading h2::after{
+  .heading h5::after{
       content: "";
       height: 2px;
       width: 100px;
@@ -827,57 +863,11 @@ h2{
 
 
 
-/* --- list style --- */
-
-ul.general {
-    list-style: none;
-    margin-left: 0;
-}
-ul.link-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-ul.link-list li {
-    margin: 0;
-    padding: 2px 0 2px 0;
-    list-style: none;
-}
 
 
 
 
 
-
-
-/* --- Heading style --- */
-
-h4.heading {
-    font-weight: 700;
-}
-.heading {
-    margin-bottom: 30px;
-}
-.heading {
-    position: relative;
-}
-.widgetheading {
-    width: 100%;
-    padding: 0;
-}
-#bottom .widgetheading {
-    position: relative;
-    border-bottom: #e6e6e6 1px solid;
-    padding-bottom: 9px;
-}
-aside .widgetheading {
-    position: relative;
-    border-bottom: #e9e9e9 1px solid;
-    padding-bottom: 9px;
-}
-footer .widgetheading {
-    position: relative;
-}
 
 
 
@@ -888,7 +878,7 @@ footer .widget .widgetheading span {
     position: absolute;
     width: 60px;
     height: 1px;
-    bottom: -1px;
+    
     right: 0;
 }
 .box-area {
@@ -930,9 +920,12 @@ font-weight: 700;
     background: linear-gradient(to right, #5DA5E4, #74ebd5);
 }
 
-h3{
+h6{
     text-align: center;
-    font-weight: 800;
+    color: #000;
+    font-weight: 500;
+    font-size: 20px;
+    font-weight: 600;
     color: black;
 
 }
@@ -1102,6 +1095,28 @@ input.image-toggler {
     width: fit-content;
    
 }
+
+.quote-btn-container i:hover{
+    transition: 0.9s;
+    transform: rotate(360deg);
+}
+
+
+
+
+.quote-btn-container i{
+    margin-top: 1rem;
+    font-size: 30px
+}
+
+.quote-btn-container a:hover{
+    text-decoration: none;
+
+}
+
+
+
+
 
 .quote-btn{
 
