--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ columns: center;
 
 
 .hero-text{
-  display: block;
+  display: flex;
   margin-left: auto;
   margin-right: auto ;
     text-align: center;
@@ -376,15 +376,24 @@ section.hero-text {
     background: whitesmoke;
     padding: 50px 0 50px 0;
     color: #fff;
-    display: block;
+    display: flex;
+    
+    justify-content: center;
     
 
 }
 
 
+
+
+
 section.hero-text p {
     color: black;
-    font-weight: 300;
+    font-weight: 500;
+    text-align: center;
+    font-size: 20px;
+
+
 }
 
 
@@ -459,10 +468,21 @@ hr{
   }
   
   .rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
-    -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-            transform: rotate(360deg);
+    animation: bounce 0.4s cubic-bezier(0.59, -0.67, 0.24, 0.79) 2;
+    animation-direction: alternate;
   }
+
+  @keyframes bounce {
+    0% {
+      transform: translateY(0);
+    }
+  
+    100% {
+      transform: translateY(-30px);
+    }
+  }
+
+
   
   .rounded-social-buttons .fa-tiktok, .fa-facebook-f, .fa-linkedin, .fa-yelp, .fa-instagram {
     font-size: 25px;
