--- a/css/style.css
+++ b/css/style.css
@@ -366,23 +366,32 @@ columns: center;
 
 .hero-text{
   display: flex;
-  margin-left: auto;
-  margin-right: auto ;
+
     text-align: center;
 }
 
 
 section.hero-text {
     background: whitesmoke;
-    padding: 50px 0 50px 0;
+
     color: #fff;
     display: flex;
-    
+    margin-left: 25rem;
+    margin-right: 25rem;
+
     justify-content: center;
     
 
 }
 
+
+@media (max-width:900px){
+    section.hero-text{
+        margin-left: auto;
+        margin-right: auto
+    }
+
+}
 
 
 
@@ -721,9 +730,11 @@ h5{
 
 /*Start of Services section */
 
-.content{
+#content{
     height: fit-content;
     margin: 2em;
+    background: #74ebd5;  /* fallback for old browsers */
+  
 }
 
 
@@ -733,6 +744,7 @@ h5{
     max-width: 960px;
     margin: 0 auto;
     min-height: 25vh;
+    color: black;
 
   }
   
@@ -745,6 +757,7 @@ h5{
     background: #74ebd5;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #5DA5E4 , #3BA0F4);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #5DA5E4, #74ebd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     
   }
 
@@ -763,7 +776,7 @@ h5{
   
   .services {
     display: flex;
-    grid-template-columns: repeat(4, 4fr);
+    grid-template-columns: repeat(2, 2fr);
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -824,7 +837,8 @@ h5{
       .service-item {
         width: 70%;
         height: 120px;
-        justify-content: center;
+        justify-content: center; 
+    
     
       }
     
@@ -833,7 +847,7 @@ h5{
     
     .service-item h2{
         justify-content: center;
-         font-size: 10px;
+         font-size: 9px;
         margin-bottom: -17rem;
       }
      
