--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ h5{
   
 
 
-@media (max-width: 768px){
+@media (min-width:200px) and (max-width: 768px){
 
 
 
@@ -900,7 +900,7 @@ h5{
         margin-top: 3rem;
        
       
-        grid-template-columns: repeat(4, 4fr);
+        grid-template-columns: repeat(4, 1fr);
     }
     
         
@@ -915,7 +915,7 @@ h5{
     
       }
     
-    
+   
     
     
     .service-item h2{
