--- a/css/style.css
+++ b/css/style.css
@@ -621,6 +621,10 @@ hr{
     background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
 
   }
+
+  .rounded-social-buttons .social-button.linkedin {
+    background: #0077b5 ;
+  }
   
 
   /*end of social Icons*/
