--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,12 @@ header{
 
 
 
-.service-page{
-    background-color: #66369D;
+
+.container-fluid{
+  margin-top:2rem;
+  background: linear-gradient(135deg, #66369D 60%, #Bf9553);
+
 }
-
-
 
 
 h1{
@@ -142,7 +143,8 @@ h6{
 
 
 hr{
-  
+  color: black;
+  border: 1px solid black;
 }
 
 .border{
@@ -1065,9 +1067,13 @@ section.hero-text p {
 .image-gallery{
     display: grid;
 
-    background: #66369D ;
+
 }
 
+
+.gallery-page{
+  background-color: linear-gradient(135deg, #66369D 60%, #Bf9553);
+}
 
 
 .gallery-container{
@@ -1080,6 +1086,7 @@ section.hero-text p {
 
 .gallery {
     display: flex;
+   
 
 	/* Compensate for excess margin on outer gallery flex items */
 	margin: 0 auto;
@@ -1214,19 +1221,24 @@ input.image-toggler {
 
 
 .free-quote-section{
-
+  background-color: white;
+    color: black;
     display: flex;
-    height: 200px;
+    height: 210px;
     width: 100%;
     font-size: 30px;
     justify-content: center;
-    animation: bounce 4s infinite;
+    
+}
+
+.bounce-text{
+  animation: bounce 4s infinite;
 }
 
 
-
 .quote-container{
-    margin-top: 8rem;
+    margin-top: 6rem;
+
     
     
 
@@ -1247,7 +1259,7 @@ br{
     color: black;
     font-size: 27px;
     line-height: 2;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
   br{
     display: block;
@@ -1340,21 +1352,12 @@ br{
     background: whitesmoke;
     display: flex;
     height: 250px;
-    margin-left: 10rem;
-    margin-right: 10rem;
+   
     
   }
 
 
-@media  (min-width:300px){
 
-  .footer-section{
-
-  margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-}
 
 
   .footer-cta {
@@ -1692,7 +1695,18 @@ button:before {
 
 
 
- 
+.services-header-container{
+  text-align: center;
+  margin-top: rem;
+  background-color: whitesmoke;
+ height: 250px; 
+}
+
+
+
+
+
+
 
 
 
@@ -1702,25 +1716,15 @@ button:before {
 
 
 
-
 .services-section{
   background: linear-gradient(135deg, #66369D 60%, #Bf9553);
     background-size: cover;
 
-    margin-bottom: 5rem;
 }
-  .inner-width{
-    width: 100%;
-    max-width: 900px;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    padding: 0 20px;
-   
-    margin-top:10rem;
-    margin-bottom: 5rem;
-    text-align: center;
-  }
+
+
+
+
 
 
 
@@ -1730,10 +1734,25 @@ button:before {
   .section-title{
     text-align: center;
     color: white;
-    margin-top: 5rem;
+    line-height: 2;
+   
   
     font-size: 35px;
   }
+
+
+
+  @media (max-width:500px){
+
+    .section-title{
+      line-height: 0;
+    }
+  }
+
+
+
+
+
   .border{
     width: 160px;
     height: 2px;
@@ -1899,28 +1918,39 @@ button:before {
 
 
 
-.gallery-heading{
-  margin-top: 10rem;
+.header-container{
+  margin-top: 5rem;
   text-align: center;
+  height: 150px;
 }
+
+
+.title-decoration{
+  margin-top: 6rem;
+}
+
+
+
+
 
 
 
   h8{
 
-    font-size:40px;
+    font-size:35px;
     font-weight: 700;
-    margin-top: 10rem;
+    
     text-align:center;
-    color: white;
+    color: black;
     
     
   }
   #gallery{
+
     -webkit-column-count:4;
     -moz-column-count:4;
     column-count:4;
-    margin-top: 10rem;
+    
     
     -webkit-column-gap:20px;
     -moz-column-gap:20px;
@@ -1934,7 +1964,8 @@ button:before {
       
     -webkit-column-gap:20px;
     -moz-column-gap:20px;
-    column-gap:20px;
+    column-gap:25px;
+    margin-top: 3rem;
   }
   }
   @media (max-width:800px){
@@ -1942,7 +1973,7 @@ button:before {
     -webkit-column-count:2;
     -moz-column-count:2;
     column-count:2;
-      
+          margin-top: 3rem;
     -webkit-column-gap:20px;
     -moz-column-gap:20px;
     column-gap:20px;
@@ -1953,11 +1984,12 @@ button:before {
     -webkit-column-count:1;
     -moz-column-count:1;
     column-count:1;
+    margin-top: 3rem;
   }  
   }
   #gallery img,#gallery video {
     width:100%;
-    height:auto;
+ 
     margin: 4% auto;
     box-shadow:-3px 5px 15px #000;
     cursor: pointer;
