small change to services section

--- a/css/style.css
+++ b/css/style.css
@@ -962,13 +962,13 @@ h8{
 @media (min-width:200px) and (max-width: 868px){
 
   .work{
-    height: 700px;
+    height: 800px;
   }
 
 
     #landing{
-     
-        margin-bottom: -38rem;
+     height: 33hz;
+        margin-bottom: -30rem;
 
 
     }
