added markate api

--- a/css/style.css
+++ b/css/style.css
@@ -1068,6 +1068,18 @@ h8{
 
 
 
+.markate-container{
+  background-color: whitesmoke;
+  border-radius: 1rem;
+  padding: 3rem;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+ margin-left: 7rem;
+ margin-right: 7rem;
+}
+
+
+
 
 
 
